--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hamburger-menu": "^1.2.1",
     "react-helmet": "^6.1.0",
     "react-mailto": "^0.4.0",
+    "react-mobile-store-button": "0.0.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-social-icons": "^4.1.0"
