--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "//": "for when you refactor directory: eslint src/**/*.js src/**/*.jsx",
+    "lint": "eslint src/*.js src/*.jsx"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -51,6 +53,14 @@
     ]
   },
   "devDependencies": {
-    "jest": "^27.0.6"
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^24.9.0"
   }
 }
