--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "test": "jest",
     "eject": "react-scripts eject",
     "//": "for when you refactor directory: eslint src/**/*.js src/**/*.jsx",
-    "lint": "eslint src/*.js src/*.jsx"
+    "lint": "eslint src/*.js src/**/*.jsx src/**/*.js"
   },
   "eslintConfig": {
     "extends": "react-app"
