--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@material-ui/core": "^4.12.1",
+    "@material-ui/core": "^4.12.3",
     "@react-navigation/native": "^5.9.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^26.0.24",
-    "@types/node": "^16.3.3",
-    "@types/react": "^17.0.14",
+    "@types/node": "^16.4.10",
+    "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "eslint-import-resolver-typescript": "^2.4.0",
     "react": "^16.14.0",
@@ -26,7 +26,7 @@
     "react-mailto": "^0.4.0",
     "react-mobile-store-button": "0.0.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.4",
     "react-social-icons": "^4.1.0",
     "typescript": "^4.3.5"
   },
@@ -36,7 +36,7 @@
     "test": "jest",
     "eject": "react-scripts eject",
     "//": "for when you refactor directory: eslint src/**/*.js src/**/*.jsx",
-    "lint": "eslint src/*.js src/**/*.tsx src/**/*.js --fix"
+    "lint": "eslint src/*.js src/**/*.tsx src/**/*.js src/**/*.ts --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -56,8 +56,8 @@
   "devDependencies": {
     "@types/react-copy-to-clipboard": "^5.0.1",
     "@types/react-router-dom": "^5.1.8",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.23.4",
