--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-mailto": "^0.4.0",
     "react-mobile-store-button": "0.0.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.4",
+    "react-scripts": "^4.0.3",
     "react-social-icons": "^4.1.0",
     "typescript": "^4.3.5"
   },
@@ -58,12 +58,12 @@
     "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
-    "eslint": "^6.6.0",
+    "eslint": "^7.0.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^24.9.0"
+    "jest": "26.6.0"
   }
 }
