--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-social-icons": "^4.1.0",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "cross-env NODE_ENV=test jest --coverage",
+    "test": "cross-env NODE_ENV=test jest --config ./jest.config.js --coverage",
     "test:debug": "cross-env NODE_ENV=test node --inspect ./node_modules/jest/bin/jest.js --runInBand",
     "eject": "react-scripts eject",
     "//": "for when you refactor directory: eslint src/**/*.js src/**/*.jsx",
@@ -68,6 +69,6 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "26.6.0"
+    "jest": "^27.0.0"
   }
 }
